--- a/static/form.html
+++ b/static/form.html
@@ -10,6 +10,7 @@
         <form action="POST" action="/form">
 <label for="Name"></label><input name="name" type="text" value=""/>
 <label for="Address"></label><input  name="address" type="text" value=""/>
+<label for="Email"></label><input name="email" type="text" value=""/>
 <input type="submit" value="submit"/>
     </div>
 </body>
